fix: add overflow hidden option

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
-html {
+html,
+body,
+#root {
   width: 100%;
   height: 100%;
 }
 
 body {
+  overflow: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
